packages/yew-macro/tests/html_macro/html-if-fail.stderr
error: missing condition for `if` expression
 --> tests/html_macro/html-if-fail.rs:4:16
  |
4 |     html! { if {} };
  |                ^^

error: expected block or `if` after `else`
 --> tests/html_macro/html-if-fail.rs:6:24
  |
6 |     html! { if true {} else };
  |                        ^^^^

error: missing condition for `if` expression
 --> tests/html_macro/html-if-fail.rs:7:32
  |
7 |     html! { if true {} else if {} };
  |                                ^^

error: expected block or `if` after `else`
 --> tests/html_macro/html-if-fail.rs:8:40
  |
8 |     html! { if true {} else if true {} else };
  |                                        ^^^^

error: expected block or `if` after `else`
 --> tests/html_macro/html-if-fail.rs:9:40
  |
9 |     html! { if true {} else if true {} else };
  |                                        ^^^^

error[E0308]: mismatched types
 --> tests/html_macro/html-if-fail.rs:5:16
  |
5 |     html! { if 42 {} };
  |                ^^ expected `bool`, found integer
